# Qt-plane-game

./: Bullet.cpp  Bullet.h  CMakeLists.txt  CMakeUserPresets.json  Entity.h  EntityManager.h  Global.h  Map.cpp  Map.h  PlayerPlane.cpp  PlayerPlane.h  QGame.cpp  QGame.h  README.md  Resource.qrc  Sprite.cpp  Sprite.h  main.cpp
